created Footer.js to implement footer

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,4 +11,5 @@
 @import "../components/Resuable/MyCarousal";
 @import "../components/Resuable/Card.scss";
 @import "../components/Resuable/FeatureCard";
-@import "../pages/product/Products"
+@import "../pages/product/Products";
+@import "../components/Footer/Footer"
