--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -5,3 +5,5 @@ $darkGrey: #2c2a2a;
 $lightGrey: #bdbbbb;
 
 $fontStyle1: 'Roboto Slab', serif;
+$fontStyle2:'Teko', sans-serif; 
+$official :'Mulish', sans-serif;
