--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,3 +19,4 @@
 @import "../components/Modal/Modal";
 @import "../components/Forms/LoginForm";
 @import "../components/Forms/Register";
+@import "../components/Cart/Cart"
