--- a/src/_App.scss
+++ b/src/_App.scss
@@ -4,9 +4,16 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  
 }
 
 .main-header{
   width: 100%;
   background-color: $primary;
+  position: fixed;
+  z-index: 10;
+}
+
+.space-occupier{
+  height:120px;
 }
