--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -11,9 +11,9 @@
         margin-left: 80px;
         text-align: center;
         h2{
-            font-size: 80px;
+            font-size: 70px;
             margin-bottom: 0;
-            line-height: 70px;
+            line-height: 60px;
         }
         h3{
             font-size: 40px;
@@ -68,6 +68,9 @@
         label{
             font-size: 20px;
             cursor: pointer;
+        }
+        .account{
+            margin-left: 56px;
         }
 
 }
