--- a/src/components/Header/_NavBar.scss
+++ b/src/components/Header/_NavBar.scss
@@ -5,11 +5,12 @@
 
     ul{
         list-style: none;
+        margin-top: 0.5rem;
     }
     li{
         display: inline-block;
         padding: 0px 16px 0px 16px;
-        margin: 14px 4px;
+        margin: 2px 4px;
         margin-bottom: 0;
         border-right: 1px solid white;
 
