--- a/src/pages/Product/_Products.scss
+++ b/src/pages/Product/_Products.scss
@@ -6,3 +6,64 @@
     flex-wrap: wrap;
     margin-top: 32px;
 }
+
+
+.product-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    border-radius: 8px;
+    overflow: hidden;
+    cursor: pointer;
+    width:20%;
+    min-width: 170px;
+    margin:8px;
+    margin-bottom: 16px;
+    text-align: center;
+    box-shadow: 4px 7px 8px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 4px 7px 8px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 4px 7px 8px 0px rgba(0,0,0,0.75);
+    background-color:$primary;
+
+    &:hover{
+        transform: scale(1.01);
+        .name-container,.actions,h3,input{
+            background-color: white;
+        }
+    }
+    .image-div{
+        width: 100%;
+        background-color: white;
+
+        #img-container{
+            margin: 16px 0px;
+            width: 60%;
+        }
+    }   
+
+    .actions{
+        display: flex;
+        justify-content: center;
+        padding-bottom: 8px;
+        width: 100%;
+    }
+
+    .qty-input{
+        width: 30%;
+        border-radius: 8px;
+        background-color: $primary;
+    }
+
+    .name-container{
+        width: 100%;
+        height:-webkit-fill-available;
+    }
+    h3{
+        width: 100%;
+        margin-bottom: 0;
+        padding-bottom: 8px;
+    }
+    
+}
