--- a/src/_App.scss
+++ b/src/_App.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  overflow: hidden;
   
 }
 
@@ -12,8 +13,16 @@
   background-color: $primary;
   position: fixed;
   z-index: 10;
+  @media screen and (max-width:500px){
+      position: static;
+    
+  }
 }
+
 
 .space-occupier{
   height:120px;
+  @media (max-width:500px){
+    height:0;     
+}
 }
