--- a/src/components/Cart/_Cart.scss
+++ b/src/components/Cart/_Cart.scss
@@ -4,6 +4,12 @@
     border-radius: 8px;
     position: relative;
     animation: login-animation 200ms ease-in;
+    @media (max-width:500px){
+        position:static;
+        width: 88%;
+        overflow-x:hidden;
+        overflow-y: auto;
+    }
 
     .x-box{
         position: absolute;
@@ -16,6 +22,9 @@
         font-weight: 100;
         font-size: 32px;
         cursor: pointer;
+        @media (max-width:500px){
+            display: none;    
+        }
     }
 
     .cart-items-div{
@@ -24,10 +33,16 @@
         width: 90%;
         justify-content: space-around;
         margin-top: 10px;
+        @media (max-width:500px){
+            display: inline;
+            overflow-y: scroll;
+            overflow-x: scroll;    
+        }
     }
 
     ul{
         list-style: none;
+        
         
         li{
             display: flex;
@@ -74,6 +89,10 @@
             width: 14%;
             background-color: #ffc107;
             font-weight: 700;
+            @media (max-width:500px){
+                width:18%;
+                     
+            }
             
         }
 
