--- a/src/components/Forms/_LoginForm.scss
+++ b/src/components/Forms/_LoginForm.scss
@@ -10,6 +10,10 @@
     animation: login-animation 200ms ease-in;
     position: relative;
 
+    @media (max-width:500px){
+        width:80%;    
+    }
+
     .x-box{
         position: absolute;
         top: -16px;
@@ -21,6 +25,9 @@
         font-weight: 100;
         font-size: 32px;
         cursor: pointer;
+        @media (max-width:500px){
+            right:-10px;    
+        }
     }
 
     .heading-div{
