--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -2,6 +2,11 @@
     display: flex;
     align-items: center;
     width: 100%;
+    @media screen and (max-width: 500px){
+        display:block;
+
+    }
+
     .logo-container{
         background-image: linear-gradient(to bottom, #6a144a, #ac2b42, #d46221, #d6a600, #a8eb12);
         background-clip: content-box;
@@ -10,39 +15,81 @@
         color: transparent;
         margin-left: 80px;
         text-align: center;
+
+        @media (max-width: 500px){
+            margin: 0;
+            align-self: flex-start;
+        }
+
         h2{
             font-size: 70px;
             margin-bottom: 0;
             line-height: 60px;
+            @media (max-width: 500px){
+                font-size:44px;
+                line-height:42px;
+            }
         }
         h3{
             font-size: 40px;
             margin-top: 0;
             margin-bottom: 8px;
             line-height: 24px;
+            @media (max-width: 500px){
+                font-size:30px;
+                padding-bottom: 18px;
+            }
         }
+
     }
     .search-icon{
         border:1px solid #cab6b6;
         padding: 5.8px;
         border-top-left-radius: 4px;
         border-bottom-left-radius: 4px;
-        margin-left: 100px;
+        margin-left: 12px;
         align-self: flex-end;
         margin-bottom: 16px;
         color: #686867;
+
+        @media (max-width:500px){
+            margin-left:8px;
+            padding:6px;
+            margin-bottom: 4px;
+            
+        }
 
     }
 
     .product-search{
         height: 30px;
-        width: 40%;
+        width: 80%;
         border-radius: 4px;
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
         align-self: flex-end;
         margin-bottom: 16px;
         border:1px solid #cab6b6;
+        
+        @media (max-width:500px){
+            width:88%;
+            margin-bottom: 4px;
+        }
+    }
+    .search-div{
+        width:40%;
+        margin-left: 16px;
+        align-self: flex-end;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        @media (max-width:500px){
+        display: flex;
+        position: fixed;
+        width:100%;
+        top:10%;   
+        }
+        
     }
 
     .action-container{
@@ -50,6 +97,19 @@
         flex-direction: column;
         align-items: center;
         margin-left: 16px;
+
+        @media (max-width:500px){
+            margin-left:0;
+            justify-content:flex-start;
+        }
+        h5{
+            @media (max-width:500px){
+                font-size:22px;
+                margin-bottom:2px;
+                margin-left: 10px;
+            }
+
+        }
 
         i{
             padding: 8px;
@@ -68,9 +128,17 @@
         label{
             font-size: 20px;
             cursor: pointer;
+            margin-left: 20px;
+
+            @media (max-width:500px){
+                margin-left:0;
+            }
         }
         .account{
-            margin-left: 56px;
+            margin-left: 10px;
+        }
+        .logout{
+            margin-left:20px;
         }
 
 }
