--- a/src/components/Header/_NavBar.scss
+++ b/src/components/Header/_NavBar.scss
@@ -2,6 +2,9 @@
     display: flex;
     justify-content: center;
     background-color: $secondary1;
+    @media (max-width:500px){
+        justify-content: flex-start;
+    }
 
     ul{
         list-style: none;
@@ -9,13 +12,17 @@
     }
     li{
         display: inline-block;
-        padding: 0px 16px 0px 16px;
+        padding: 0px 16px;
         margin: 2px 4px;
         margin-bottom: 0;
         border-right: 1px solid white;
 
         &:last-child{
             border-right:none
+        }
+        @media (max-width:500px){
+            margin: 0;
+            padding:0px 8px;
         }
     }
     a{
