--- a/src/components/Resuable/Card.scss
+++ b/src/components/Resuable/Card.scss
@@ -9,7 +9,7 @@
     overflow: hidden;
     cursor: pointer;
     width:24%;
-    min-width: 170px;
+    min-width: 150px;
     margin:8px;
     margin-bottom: 16px;
     text-align: center;
@@ -17,6 +17,11 @@
     -webkit-box-shadow: 4px 7px 8px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 4px 7px 8px 0px rgba(0,0,0,0.75);
     background-color:$primary;
+
+
+    @media (max-width:500px){
+        height:250px;     
+    }
 
     &:hover{
         transform: scale(1.01);
@@ -31,6 +36,10 @@
         #img-container{
             margin: 16px 0px;
             width: 60%;
+            @media (max-width:500px){
+                height:120px;
+                     
+            }
         }
     }   
 
@@ -39,7 +48,18 @@
         justify-content: center;
         padding-bottom: 8px;
         width: 100%;
+        @media (max-width:500px){
+            font-size: 12px;
+            margin:2px;     
+        }
     }
+    .button{
+        @media (max-width:500px){
+            font-size: 12px;
+            margin:2px;     
+        }
+    }
+
 
     .qty-input{
         width: 30%;
@@ -51,10 +71,20 @@
         width: 100%;
         height:-webkit-fill-available;
     }
+    h4{
+        @media (max-width:500px){
+            font-size: 12px;
+            margin:2px;     
+        }
+    }
     h3{
         width: 100%;
         margin-bottom: 0;
         padding-bottom: 8px;
+        @media (max-width:500px){
+            font-size: 12px;
+            margin:2px;     
+        }
     }
     
 }
