--- a/src/components/Resuable/_MyCarousal.scss
+++ b/src/components/Resuable/_MyCarousal.scss
@@ -7,6 +7,9 @@
     width: 100%;
     margin: auto;
     height: 400px;
+    @media (max-width:500px){
+        height: 350px;      
+    }
 
     .slides{
         display: block;
@@ -14,6 +17,9 @@
         position: absolute;
         top: 0;
         height: 400px;
+        @media (max-width:500px){
+            height: 350px;      
+        }
     }
 
     a{
@@ -24,6 +30,9 @@
     img{
         width: 100%;
         height: 400px;
+        @media (max-width:500px){
+            height: 350px;      
+        }
     }
       
       
