--- a/src/pages/Home/_Home.scss
+++ b/src/pages/Home/_Home.scss
@@ -21,6 +21,17 @@
           width: 70%;
           display: flex;
           padding: 8px;
+          @media (max-width:500px){
+            width: 100%;
+            overflow-x: scroll;      
+        }
+      }
+
+      .top-product-heading{
+        @media (max-width:500px){
+            font-size: 18px;
+            margin-top:8px;     
+        }
       }
 
       
